--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -30,12 +30,15 @@ h1 {
 
 
 /* ---------------------- BOXEN ----------------------- */
+body{
+    padding: 0;
+    margin-top: -20;
+}
 #wrapper{
     width: 100%;
     max-width: 1250px;
     min-height: 1000px;
     padding: 0px 0px;
-    margin: 140px auto 0px auto;
 }
 
 header {
