--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -30,7 +30,7 @@ h1 {
 /* ---------------------- BOXEN ----------------------- */
 body{
     padding: 0;
-    background-image: url('view/images/background.png');
+
     
 }
 
@@ -96,11 +96,26 @@ header {
     padding-left: 25px;
 }
 #headerr button{
-    width: 9.69%;
+    width: 10%;
     font-size: 1em;
-    height: 100%; 
+    padding: 10px;
+    margin: 10px 25px 25px 0px;
     cursor: pointer;
     float: right;
+    display: block;
+    background-color: grey;
+    border-width: 0px;
+    
+}
+#headerr a{
+    margin-left: 15px;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+}
+
+#headerr button:hover{
+    opacity: 0.7;
 }
 
 .logo {
@@ -141,7 +156,7 @@ header a {
 
 #spalter {
     width: 100%;
-    background-color: maroon;
+    background-color: #fff;
     height: 100%;
     visibility: hidden;
 }
@@ -149,6 +164,8 @@ header a {
 #spalter #Chatverlauf{
     height: 93%;
     background-image: url('view/images/whatsapp.jpg');
+    background-size: 20%;
+    background-repeat: repeat;
     overflow: auto;
     padding: 25px;
 }
@@ -157,13 +174,20 @@ header a {
     width: 60%;
     padding: 15px;
     font-size: 1em;
-    height: 7%; 
+    height: 7%;
+    border-width: 0px;
 }
 .NachrichtSenden input[type="submit"]{
     width: 9.5%;
     font-size: 1em;
     height: 7%; 
     cursor: pointer;
+    background-color: #fff;
+    border-width: 0px;
+}
+.NachrichtSenden input[type="submit"]:hover{
+    border-width: 1px;
+    border-color: lightgray;
 }
 
 .contact {
